# abstract-algebra

./: pyproject.toml
abstracta/: Function.py  Group.py  Set.py  __init__.py
tests/: function_test.py  group_test.py  set_test.py
